changement position footer (fixed -> absolute + correction alignement des liens dans le menu burger

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,8 @@ svg {
 
 body {
   margin: 0; /* Supprime la marge par défaut du corps */
-  min-height: 100vh; /* Fixe la hauteur minimale du corps à 100% de la hauteur de la vue */
+  min-height: 100dvh; /* Fixe la hauteur minimale du corps à 100% de la hauteur de la vue */
+  position: relative;
 }
 
 h1,
@@ -153,7 +154,7 @@ header {
 }
 
 footer {
-  position: fixed;
+  position: absolute;
   bottom: 0;
   width: 100%;
   height: auto;
@@ -196,13 +197,13 @@ footer {
   .navbar.active {
     display: flex;
     flex-direction: column; /* Affiche les éléments verticalement */
-    justify-content: flex-start; /* Aligne le contenu horizontalement sur l'extrémité gauche du conteneur */
+    justify-content: center;
     align-items: flex-end;
     margin: 5% 0 0 0;
     top: 0;
     right: 0;
     position: absolute;
-    height: 100vh;
+    height: 100dvh;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(5px);
@@ -215,6 +216,7 @@ footer {
     align-items: center; /* Aligne le contenu verticalement sur le centre */
     height: 100%;
     width: 100%;
+    margin: 0;
     background-color: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(5px);
   }
